sumo/tests/sumo/errors/duplicates/vehicleid_emitteremission/errors.sumo
Warning: MSTriggeredSource emitter: Vehicle 1 already exists.
 Generating a default id.
